--- a/prepros.cfg
+++ b/prepros.cfg
@@ -6,7 +6,7 @@
     "data": {
       "id": "",
       "cfgVersion": 2,
-      "name": "reactionary",
+      "name": "Reactionary WP Theme",
       "path": "",
       "files": {
         "12106095": {
@@ -159,7 +159,7 @@
         "b4c084f5": {
           "id": "b4c084f5",
           "path": "assets/js/reactionary.js",
-          "output": "assets/js/reactionary-dist.js",
+          "output": "assets/js/reactionary.js",
           "name": "reactionary.js",
           "category": "JS",
           "autoCompile": false,
@@ -167,7 +167,7 @@
           "mangle": true,
           "babel": false,
           "sourceMaps": false,
-          "customOutput": false,
+          "customOutput": true,
           "imported": false,
           "parents": [],
           "type": "javascript"
@@ -220,6 +220,32 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "2e8f9ea2": {
+          "id": "2e8f9ea2",
+          "path": "README.md",
+          "output": "README.html",
+          "name": "README.md",
+          "category": "HTML",
+          "autoCompile": true,
+          "sanitize": false,
+          "gfm": true,
+          "wrapWithHtml": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "markdown"
+        },
+        "594e7c6d": {
+          "id": "594e7c6d",
+          "path": "assets/js/reactionary-source.jsx",
+          "output": "assets/js/reactionary-source.jsx",
+          "name": "reactionary-source.jsx",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "jsx"
         }
       },
       "deploymentHistory": {},
@@ -229,8 +255,8 @@
         "useCustomServer": true,
         "port": 0,
         "useCustomPort": false,
-        "customServerUrl": "http://dev.reactionary.no",
-        "watchedFileExtensions": "sass, scss, js, html, htm, css, php, png, jpg, jpeg",
+        "customServerUrl": "http://reactionary.dev",
+        "watchedFileExtensions": "sass, scss, js, jsx, html, htm, css, php, png, jpg, jpeg",
         "excludePatterns": "Prepros Build, node_modules, .git, .idea, .sass-cache, .hg, .svn, .cache, config.rb, prepros.cfg, .DS_Store, bower_components",
         "autoprefixerBrowsers": "last 4 versions",
         "liveRefreshDelay": 0,
