--- a/prepros.cfg
+++ b/prepros.cfg
@@ -129,7 +129,7 @@
           "output": "assets/css/_main.css",
           "name": "_main.scss",
           "category": "CSS",
-          "autoCompile": false,
+          "autoCompile": true,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -137,10 +137,8 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "067ed69e"
-          ],
+          "imported": false,
+          "parents": [],
           "type": "sass"
         },
         "821f5664": {
@@ -236,16 +234,41 @@
           "parents": [],
           "type": "markdown"
         },
-        "594e7c6d": {
-          "id": "594e7c6d",
-          "path": "assets/js/reactionary-source.jsx",
-          "output": "assets/js/reactionary-source.jsx",
-          "name": "reactionary-source.jsx",
-          "category": "JUST_WATCH",
+        "19b49b70": {
+          "id": "19b49b70",
+          "path": "assets/scss/_alt.scss",
+          "output": "assets/css/style.css",
+          "name": "_alt.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": true,
+          "imported": true,
+          "parents": [
+            "067ed69e"
+          ],
+          "type": "sass"
+        },
+        "96ba1f25": {
+          "id": "96ba1f25",
+          "path": "assets/js/utilities.js",
+          "output": "assets/js/utilities-dist.js",
+          "name": "utilities.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "jsx"
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
